Fixed footer overlap

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3730,7 +3730,7 @@ header {
 				color: rgba(255, 255, 255, 0.35);
 				display: inline-block;
 				font-size: 0.9em;
-				line-height: 0.7;
+				line-height: 1.4;
 				margin-left: 1em;
 				padding: 0;
 				padding-left: 1em;
